# qmc4

./: CMakeLists.txt  LICENSE  README.md  input.json  log
cmake/: CMakeListsOld.txt  init.cmake  userDefinitions.h.in
dmc/: CMakeLists.txt  abstractFactory.cpp  abstractFactory.h  accumulators.h  branching.cpp  branching.h  centerOfMassSquared.cpp  centerOfMassSquared.h  correlationEstimator.cpp  correlationEstimator.h  current_test.cpp  dmcDriver.cpp  dmcDriver.h  driver.cpp  driver.h  energy.cpp  energy.h  estimatorCollection.cpp  estimatorCollection.h  estimators.cpp  estimators.h  estimatorsFactory.cpp  estimatorsFactory.h  factory.cpp  factory.h  geometry.cpp  geometry.h  geometryPMC.h  hyperRadius.cpp  hyperRadius.h  initializer.cpp  initializer.h  input.cpp  input.h  main.cpp  metropolis.cpp  metropolis.h  observables.cpp  observables.h  optimizationObservables.cpp  (+38 more)
dmc/PIMC/: potential.h
dmc/moves/: dmcMoves.cpp  dmcMoves.h  move.h  vmcMoves.cpp  vmcMoves.h
dmc/wavefunction/: #jastrowWavefunctionThreeBody.h#  hardSphere.h  jastrowWavefunctionOneBody.h  jastrowWavefunctionThreeBody.cpp  jastrowWavefunctionThreeBody.h  jastrowWavefunctionTwoBody.h  productWavefunction.cpp  productWavefunction.h  shell.cpp  shell.h  slaterDeterminant.cpp  slaterDeterminant.h  wavefunction.cpp  wavefunction.h  wavefunctionFactory.h
dmc/wavefunction/jastrows/: #jastrowPoschTeller.h#  jastrow.h  jastrowDipolar.cpp  jastrowDipolar.h  jastrowGaussGauss.cpp  jastrowGaussGauss.h  jastrowGaussian.h  jastrowHardSphereGauss.cpp  jastrowHardSphereGauss.h  jastrowPoschTeller.cpp  jastrowPoschTeller.h  jastrowSpline.cpp  jastrowSpline.h  jastrowSquareWell.cpp  jastrowSquareWell.h  jastrow_delta.cpp  jastrow_delta.h
examples/dmc/: dipolarMixture.json  freeFermi.json  harmonicOscillator.json  harmonicOscillator1DTG.json  liebLieniger.json  mixture1D.json  unitaryFermi.json
examples/pimc/: free-grandCanonical.json  grandCanonical.json  harmonicGrandPotential.json  interacting-grandCanonical.json  mixture-free.json  mixture.json  semiGrandCanonical.json  singleComponent.json
particleKernels/: .gitignore  CMakeLists.txt  CMakeLists.txt.old  README.md  timePerf.py
particleKernels/cmake/: init.cmake
particleKernels/smallTests/: a.out  loop.cpp  meta.cpp  test  tst
particleKernels/src/: CMakeLists.txt  cellData.h  cellNeighbourList.cpp  cellNeighbourList.h  lattice.cpp  lattice.h  listKernels.hpp  main.cpp  particleData.cpp  particleData.h  randomKernel.cpp  randomKernel.h  timers.cpp  timers.h  twoBodyDistances.hpp  twoBodyPotential.cpp  twoBodyPotential.h  twoBodyPotential.hpp  utils.cpp  utils.h
particleKernels/timers/: CMakeLists.txt  analPerformanceData.py  compile.sh  main.cpp  time2B.py
particleKernels/tst/: CMakeLists.txt  linkedCell.cpp  main.cpp  testGlobals.h  testUtils.cpp  testUtils.h  twoBodyTest.cpp  verlet-test.cpp
pimc/: CMakeLists.txt  accelerationStructure.cpp  accelerationStructure.h  action.cpp  action.h  actionConstructor.h  actionOneBodyConstructor.h  actionPairProduct.h  actionTwoBody.cpp  actionTwoBody.h  actionTwoBodyConstructor.h  actionTwoBodyMesh.h  actionTwoBodyMeshConstructor.cpp  actionTwoBodyMeshConstructor.h  actionsConstructor.h  caoBerne.h  eventTable.json  exampleActions.cpp  exampleActions.h  forces.cpp  forces.h  geometryPMC.cpp  hdf5IO.cpp  hdf5IO.h  kernelConstructor.h  kernels.cpp  kernels.h  levyReconstructor.cpp  levyReconstructor.h  moves-original.cpp  moves.cpp  moves.h  moves.json  movesOld.cpp  movesOld.h  nConnectedChains.cpp  nConnectedChains.h  pairProductKernel.h  pairProductKernel.h.old  pairProductMeshKernel.cpp  (+31 more)
pimc/particleContainer/: particleContainer.cpp  particleContainer.h  particleDistancesList.cpp  particleDistancesList.h
prototypes/: Untitled.ipynb
scripts/vmd/: loadConfiguration.tcl  loadConfigurationTemplate.tcl  pimcConvert.py  state.vmd  vmd.py  vmdTclScript.tcl
tst/: CMakeLists.txt  PPA-test.cpp  acceleretorTest.cpp  action-test.cpp  benchmarks.cpp  dmc-test.cpp  integrationTests.cpp  integrationTests.h  jastrow-test.cpp  main.cpp  pairProductKernelOptimized.h  parameters-test.cpp  pimc-test.cpp  ptools-test.cpp  test-moves.cpp  test-optimization.cpp  test-particleContainer.cpp  test-tools.h  testConfigurations.cpp  testConfigurations.h  tst  wavefunction-test.cpp
tst/runTests/: twoComponentMixture.json
tst/sampleInputs/: input.json
tst/testInitalConfigurationVMC/: configurations-Rank0.json
